  payload, so as to improve processing speed a little bit.

# Automatic and easy-to-setup chroot environment :
  Miredo only needs an empty directory to chroot. It is created by
  make install and automatically used.

# PID file moved: it is now located in /usr/local/var/run/miredo.pid by
  default.

# Support for server only mode (no longer have to run a relay as well).

# Cleaned up server implementation.

# Fixed packet source/destination IPv6 addresses checks in client/relay.

=============================================================================
BETA RELEASE 0.3.2 : Minor bugfixes

# Configure option --enable-pidfile=<path> to change the pidfile path
  (or --disable-pidfile to disable pidfile generation)

# Safer default configuration : Miredo uses the "nobody" user which
  should exists on any system, instead of root by default.

# FreeBSD compilation fixes.

=============================================================================
BETA RELEASE 0.3.1 : Minor feature enhancement

# POSIX.1e capabilities support :
  If you have libcap on your system, miredo will now use POSIX.1e
  capabilities. That should reduce the possible impact of a hypothetic
  compromise of the program.

# Gettext internationalization support :
  Miredo can now be localized in other languages beside English.
  A French translation is provided. Other translations will be included
  upon submission by volunteer translators.

# PID file:
  Miredo can low create a PID file as /var/run/miredo/miredo.pid which can
  be useful to make initscripts.

=============================================================================
BETA RELEASE 0.3.0 : Major feature enhancement

# Proper queueing of packets :
  That should speed up connectivity a bit, and fix various connectivity
  issues most particularly with, though not limited to, Teredo clients.

# Automatically select an available UDP port for relay and client.
  You can use the '-p' command line option to specify a particular port