@@ -186,8 +186,7 @@ Miredo to fail when not using a fixed predefined port.
 .BI "SyslogFacility " "facility"
 Specify which syslog's facility is to be used by Miredo for logging.
 .RB "Possible values are: " "daemon" " (the default), " "local0" ","
-.RB "... " "local7" ", " "kernel" " and " "user" " (see syslog(2))."
-\" FIXME: implement this
+.RB "... " "local7" ", " "kern" " and " "user" " (see syslog(2))."
 
 .SH "SEE ALSO"
 miredo(8)
